// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrevNextBar renders \`null\` when passed a page that isn't in the book tree 1`] = `
.c3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c2 {
  height: 2.5rem;
  width: 2.5rem;
  margin-top: 0.1rem;
}

.c0 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  overflow: visible;
  max-width: 82.5rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 5rem auto 4rem auto;
  border-top: solid 0.1rem #e5e5e5;
  border-bottom: solid 0.1rem #e5e5e5;
}

.c0 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  color: #0064A0;
}

.c0 a {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width:75em) {
  .c1 {
    margin-right: -0.8rem;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin: 3.5rem auto 3.7rem auto;
    border: 0;
  }
}

<div
  className="c0"
>
  <span
    aria-hidden={true}
  />
  <a
    aria-label="Next Page"
    className="c1"
    href="books/book-slug-1/pages/test-page-1"
    onClick={[Function]}
  >
    Next
    <svg
      aria-hidden="true"
      className="c2 c3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders \`null\` with no page or book 1`] = `
.c0 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  overflow: visible;
  max-width: 82.5rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 5rem auto 4rem auto;
  border-top: solid 0.1rem #e5e5e5;
  border-bottom: solid 0.1rem #e5e5e5;
}

.c0 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  color: #0064A0;
}

.c0 a {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin: 3.5rem auto 3.7rem auto;
    border: 0;
  }
}

<div
  className="c0"
>
  <span
    aria-hidden={true}
  />
  <span
    aria-hidden={true}
  />
</div>
`;

exports[`PrevNextBar renders correctly when you pass a page and book 1`] = `
.c3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c2 {
  height: 2.5rem;
  width: 2.5rem;
}

.c5 {
  height: 2.5rem;
  width: 2.5rem;
  margin-top: 0.1rem;
}

.c0 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  overflow: visible;
  max-width: 82.5rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 5rem auto 4rem auto;
  border-top: solid 0.1rem #e5e5e5;
  border-bottom: solid 0.1rem #e5e5e5;
}

.c0 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  color: #0064A0;
}

.c0 a {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width:75em) {
  .c1 {
    margin-left: -0.8rem;
  }
}

@media screen and (max-width:75em) {
  .c4 {
    margin-right: -0.8rem;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin: 3.5rem auto 3.7rem auto;
    border: 0;
  }
}

<div
  className="c0"
>
  <a
    aria-label="Previous Page"
    className="c1"
    href="books/book-slug-1/pages/2-test-page-3"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="c2 c3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
      />
    </svg>
    Previous
  </a>
  <a
    aria-label="Next Page"
    className="c4"
    href="books/book-slug-1/pages/4-test-page-5"
    onClick={[Function]}
  >
    Next
    <svg
      aria-hidden="true"
      className="c5 c3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders only \`next\` element correctly 1`] = `
.c3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c2 {
  height: 2.5rem;
  width: 2.5rem;
  margin-top: 0.1rem;
}

.c0 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  overflow: visible;
  max-width: 82.5rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 5rem auto 4rem auto;
  border-top: solid 0.1rem #e5e5e5;
  border-bottom: solid 0.1rem #e5e5e5;
}

.c0 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  color: #0064A0;
}

.c0 a {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width:75em) {
  .c1 {
    margin-right: -0.8rem;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin: 3.5rem auto 3.7rem auto;
    border: 0;
  }
}

<div
  className="c0"
>
  <span
    aria-hidden={true}
  />
  <a
    aria-label="Next Page"
    className="c1"
    href="books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units"
    onClick={[Function]}
  >
    Next
    <svg
      aria-hidden="true"
      className="c2 c3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
      />
    </svg>
  </a>
</div>
`;

exports[`PrevNextBar renders only \`prev\` element correctly 1`] = `
.c3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c2 {
  height: 2.5rem;
  width: 2.5rem;
}

.c0 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  overflow: visible;
  max-width: 82.5rem;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 4rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 5rem auto 4rem auto;
  border-top: solid 0.1rem #e5e5e5;
  border-bottom: solid 0.1rem #e5e5e5;
}

.c0 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 a:hover {
  color: #0064A0;
}

.c0 a {
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (max-width:75em) {
  .c1 {
    margin-left: -0.8rem;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin: 3.5rem auto 3.7rem auto;
    border: 0;
  }
}

<div
  className="c0"
>
  <a
    aria-label="Previous Page"
    className="c1"
    href="books/book-slug-1/pages/d-glossary-of-key-symbols-and-notation"
    onClick={[Function]}
  >
    <svg
      aria-hidden="true"
      className="c2 c3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
      />
    </svg>
    Previous
  </a>
  <span
    aria-hidden={true}
  />
</div>
`;
